fix scrollbar quando la finestra viene rimpicciolita (#97)
* fix scrollbar

* fix scroll messaggi

--- a/src/frontend/styles/main.css
+++ b/src/frontend/styles/main.css
@@ -3,6 +3,7 @@
   margin: 0px;
   padding: 0px;
   font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow: hidden;
 }
 
 body {
